--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "axios": "^1.2.3",
     "dotenv": "^16.0.3",
+    "global": "^4.4.0",
+    "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form": "^4.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "redux": "^4.2.0",
