--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-form": "^4.0.1",
+    "react-hook-form": "^7.43.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "redux": "^4.2.0",
