--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
-    "start": "node ./index.js",
+    "start": "node ./src/index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
