--- a/api/package.json
+++ b/api/package.json
@@ -4,32 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js",
-    "start": "node ./index.js",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "start": "ts-node src/app.ts"
   },
-  "author": "Henry",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=12.18.3",
-    "npm": ">=6.14.6"
-  },
   "dependencies": {
-    "axios": "^1.2.2",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "axios": "^1.3.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
-    "nodemon": "^2.0.6",
-    "supertest": "^6.0.1",
-    "supertest-session": "^4.1.0"
+    "@types/axios": "^0.14.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.14.1",
+    "nodemon": "^2.0.20"
   }
 }
